redact-pdf/anonymisation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anonymisation-service
  namespace: anonymus
spec:
  selector:
    app: anonymisation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
