redact-pdf/anonymisation/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anonymisation-ingress
  namespace: anonymus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: nginx.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /anonymisation
        pathType: Prefix
        backend:
          service:
            name: anonymisation-service
            port:
              number: 80
